# ros_opencv

./: .gitignore  README.md
catkin_ws/src/cv_basics/: CMakeLists.txt  package.xml
catkin_ws/src/cv_basics/launch/: cv_basics.launch
catkin_ws/src/cv_basics/src/: webcam_pub.cpp  webcam_rec.cpp
